--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,8 +14,8 @@ spec:
       labels:
         app: todo-app
     spec:
-      containers:
-      - image: thoba/todo-list-app
+    containers:
+      - image: peter3636/todo-app
         name: todo-app
         ports:
-        - containerPort: 8080
+        - containerPort: 8090
